--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "google-book-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dirk44.github.io/Google_Book_Search/",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
