--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "repository": {
+		"type": "git",
+		"url": "git+https://github.com/Dirk44/Google_Book_Search.git"
+	},
+	"keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+		"url": "https://github.com/Dirk44/Google_Book_Search/issues"
+	},
+	"homepage": "https://github.com//Dirk44/Google_Book_Search#readme",
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "nodemon": "^1.18.7",
-    "prettier": "2.2.1"
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "mongoose": "^5.12.2",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.12.2"
   },
   "engines": {
     "node": "14.15.0",
